tests, funktionieren nur teilweise. filter aktualisiert; stream methoden hinzugefügt