@@ -5,43 +5,50 @@ import at.ac.fhcampuswien.fhmdb.models.Genre;
 import at.ac.fhcampuswien.fhmdb.models.Movie;
 import at.ac.fhcampuswien.fhmdb.models.SortedState;
 import at.ac.fhcampuswien.fhmdb.ui.MovieCell;
+import com.jfoenix.controls.JFXButton;
+import com.jfoenix.controls.JFXComboBox;
+import com.jfoenix.controls.JFXListView;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import com.jfoenix.controls.JFXButton;
-import com.jfoenix.controls.JFXComboBox;
-import com.jfoenix.controls.JFXListView;
 import javafx.scene.control.TextField;
 
 import java.io.IOException;
 import java.net.URL;
-import java.util.*;
-import java.util.function.Function;
+import java.time.Year;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
 public class HomeController implements Initializable {
-    @FXML
-    public JFXButton searchBtn;
 
     @FXML
-    public TextField searchField;
+    JFXButton searchBtn;
 
     @FXML
-    public JFXListView<Movie> movieListView;
+    TextField searchField;
 
     @FXML
-    public JFXComboBox<String> genreComboBox;
+    JFXButton clearFiltersBtn;
 
     @FXML
-    public JFXButton sortBtn;
+    JFXListView<Movie> movieListView;
 
     @FXML
-    public JFXComboBox<Integer> releaseYearComboBox;
+    JFXComboBox<String> genreComboBox;
 
     @FXML
-    public JFXComboBox<Double> ratingComboBox;
+    JFXButton sortBtn;
+
+    @FXML
+    JFXComboBox<Integer> releaseYearComboBox;
+
+    @FXML
+    JFXComboBox<Double> ratingComboBox;
 
     public List<Movie> allMovies;
     protected ObservableList<Movie> observableMovies = FXCollections.observableArrayList();
@@ -54,6 +61,7 @@ public class HomeController implements Initializable {
         initializeLayout();
     }
 
+    // Lädt den initialen Zustand (Filmdaten)
     public void initializeState() {
         try {
             allMovies = movieAPI.fetchMovies();
@@ -65,42 +73,41 @@ public class HomeController implements Initializable {
         }
     }
 
+    // Initialisiert das Layout und füllt die Filter-ComboBoxen dynamisch
     public void initializeLayout() {
         movieListView.setItems(observableMovies);
-        movieListView.setCellFactory(movieListView -> new MovieCell());
+        movieListView.setCellFactory(listView -> new MovieCell());
 
-        genreComboBox.getItems().add("No filter");
-        Arrays.stream(Genre.values()).map(Enum::toString).forEach(genreComboBox.getItems()::add);
-        genreComboBox.setPromptText("Filter by Genre");
+        // Genre-ComboBox enthält nur die tatsächlichen Genres (kein "No filter"-Eintrag)
+        for (Genre genre : Genre.values()) {
+            genreComboBox.getItems().add(genre.toString());
+        }
+        genreComboBox.setPromptText("Select Genre");
 
-//        releaseYearComboBox.getItems().add("No filter");
-//        releaseYearComboBox.getItems().add(null);
-//        releaseYearComboBox.getItems().addAll(2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020);
-//        releaseYearComboBox.setPromptText("Select Year");
-//
-//        ratingComboBox.getItems().add("No filter");
-//        ratingComboBox.getItems().add(null);
-//        ratingComboBox.getItems().addAll(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0);
-//        ratingComboBox.setPromptText("Select Rating");
-
-//        if (!releaseYearComboBox.getItems().contains(null)) {
-//            releaseYearComboBox.getItems().add(null);
-//        }
-
-        releaseYearComboBox.getItems().addAll(2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001, 2000);
+        // Dynamisch generierte Liste der Erscheinungsjahre (von aktuellem Jahr bis 2000)
+        int currentYear = Year.now().getValue();
+        List<Integer> years = new ArrayList<>();
+        for (int year = currentYear; year >= 2000; year--) {
+            years.add(year);
+        }
+        releaseYearComboBox.getItems().addAll(years);
         releaseYearComboBox.setPromptText("Select Year");
 
-//        if (!ratingComboBox.getItems().contains(null)) {
-//            ratingComboBox.getItems().add(null);
-//        }
-        ratingComboBox.getItems().addAll(0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0);
+        // Dynamisch generierte Liste der Bewertungen (0.0 bis 10.0)
+        List<Double> ratings = new ArrayList<>();
+        for (double rating = 0.0; rating <= 10.0; rating++) {
+            ratings.add(rating);
+        }
+        ratingComboBox.getItems().addAll(ratings);
         ratingComboBox.setPromptText("Select Rating");
     }
 
+    // Wechselt zwischen auf- und absteigender Sortierung
     public void sortMovies() {
         sortMovies(sortedState == SortedState.ASCENDING ? SortedState.DESCENDING : SortedState.ASCENDING);
     }
 
+    // Sortiert die observableMovies-Liste anhand des Filmtitels
     public void sortMovies(SortedState sortDirection) {
         observableMovies.sort(sortDirection == SortedState.ASCENDING ?
                 Comparator.comparing(Movie::getTitle) :
@@ -108,81 +115,89 @@ public class HomeController implements Initializable {
         sortedState = sortDirection;
     }
 
-    public List<Movie> filterByQuery(List<Movie> movies, String query) {
-        if (query == null || query.isEmpty()) return movies;
+    // Filtert anhand des Suchstrings (Titel oder Beschreibung)
+    public List<Movie> findByQuery(List<Movie> movies, String query) {
+        if (query == null || query.isEmpty()) {
+            return movies;
+        }
         return movies.stream()
-                .filter(movie -> movie.getTitle().toLowerCase().contains(query.toLowerCase()) ||
-                        movie.getDescription().toLowerCase().contains(query.toLowerCase()))
-                .toList();
+                .filter(movie -> movie.getTitle().toLowerCase().contains(query)
+                        || movie.getDescription().toLowerCase().contains(query))
+                .collect(Collectors.toList());
     }
 
-    public List<Movie> filterByGenre(List<Movie> movies, String genre) {
-        if (genre == null || genre.equals("No filter")) return movies;
-        Genre selectedGenre = Genre.valueOf(genre);
-        return movies.stream().filter(movie -> movie.getGenres().contains(selectedGenre)).toList();
+    // Filtert anhand des Genres
+    public List<Movie> findByGenre(List<Movie> movies, String selectedGenre) {
+        if (selectedGenre == null) {
+            return movies;
+        }
+        return movies.stream()
+                .filter(movie -> movie.getGenres().contains(Genre.valueOf(selectedGenre)))
+                .collect(Collectors.toList());
     }
 
-    public List<Movie> filterByReleaseYear(List<Movie> movies, Integer releaseYear) {
-        return (releaseYear == null) ? movies : movies.stream().filter(movie -> movie.getReleaseYear() == releaseYear).toList();
+    // Filtert anhand des Erscheinungsjahres
+    public List<Movie> findByYear(List<Movie> movies, Integer year) {
+        if (year == null) {
+            return movies;
+        }
+        return movies.stream()
+                .filter(movie -> movie.getReleaseYear() == year)
+                .collect(Collectors.toList());
     }
 
-    public List<Movie> filterByRating(List<Movie> movies, Double rating) {
-        return (rating == null) ? movies : movies.stream().filter(movie -> movie.getRating() >= rating).toList();
+    // Filtert anhand der Mindestbewertung
+    public List<Movie> findByRating(List<Movie> movies, Double rating) {
+        if (rating == null) {
+            return movies;
+        }
+        return movies.stream()
+                .filter(movie -> movie.getRating() >= rating)
+                .collect(Collectors.toList());
     }
 
+    // In dieser Methode werden alle Filter nacheinander angewendet.
     public void applyAllFilters() {
         String searchQuery = searchField.getText().trim().toLowerCase();
         String selectedGenre = genreComboBox.getValue();
-        Integer releaseYear = releaseYearComboBox.getValue();
-        Double rating = ratingComboBox.getValue();
+        Integer selectedYear = releaseYearComboBox.getValue();
+        Double selectedRating = ratingComboBox.getValue();
 
         List<Movie> filteredMovies = allMovies;
-        if (!searchQuery.isEmpty()) filteredMovies = filterByQuery(filteredMovies, searchQuery);
-        filteredMovies = filterByGenre(filteredMovies, selectedGenre);
-        filteredMovies = filterByReleaseYear(filteredMovies, releaseYear);
-        filteredMovies = filterByRating(filteredMovies, rating);
+        filteredMovies = findByQuery(filteredMovies, searchQuery);
+        filteredMovies = findByGenre(filteredMovies, selectedGenre);
+        filteredMovies = findByYear(filteredMovies, selectedYear);
+        filteredMovies = findByRating(filteredMovies, selectedRating);
 
         observableMovies.clear();
         observableMovies.addAll(filteredMovies);
         sortMovies(sortedState);
     }
 
+
+    // Setzt alle Filter zurück und stellt die ursprüngliche Filmliste wieder her
+    public void clearAllFilters() {
+        searchField.clear();
+        genreComboBox.getSelectionModel().clearSelection();
+        releaseYearComboBox.getSelectionModel().clearSelection();
+        ratingComboBox.getSelectionModel().clearSelection();
+        observableMovies.clear();
+        observableMovies.addAll(allMovies);
+        sortedState = SortedState.NONE;
+    }
+
+    // Event-Handler für den Filter-Button
     public void searchBtnClicked(ActionEvent actionEvent) {
         applyAllFilters();
     }
 
+    // Event-Handler für den Sortier-Button
     public void sortBtnClicked(ActionEvent actionEvent) {
         sortMovies();
     }
 
-    public String getMostPopularActor(List<Movie> movies) {
-        return movies.stream()
-                .flatMap(movie -> movie.getMainCast().stream())
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
-                .entrySet().stream()
-                .max(Map.Entry.comparingByValue())
-                .map(Map.Entry::getKey)
-                .orElse("Unknown");
-    }
-
-    public String getLongestMovieTitle(List<Movie> movies) {
-        return movies.stream()
-                .map(movie -> movie.getTitle())
-                .max(Comparator.comparingInt(String::length))
-                .map(title -> title + " (" + title.length() + " characters)")
-                .orElse("No movies available");
-    }
-
-    public long countMoviesFrom(List<Movie> movies, String director) {
-        return movies.stream()
-                .filter(movie -> movie.getDirector().equalsIgnoreCase(director))
-                .count();
-    }
-
-    public List<Movie> getMoviesBetweenYears(List<Movie> movies, int startYear, int endYear) {
-        return movies.stream()
-                .filter(movie -> movie.getReleaseYear() >= startYear && movie.getReleaseYear() <= endYear)
-                .toList();
+    // Event-Handler für den "Clear Filters"-Button
+    public void clearFiltersBtnClicked(ActionEvent actionEvent) {
+        clearAllFilters();
     }
 }
-
